bankapp-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-backend-deployment
  template:
    metadata:
      labels:
        app: bank-backend-deployment
    spec:
      containers:
      - name: bank-backend-container
        image: 112399677424.dkr.ecr.us-east-1.amazonaws.com/dev-bankbackendapi:4
        ports:
        - containerPort: 8080
