bankapp-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-banking-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: frontend-banking-deployment
  template:
    metadata:
      labels:
        app: frontend-banking-deployment
    spec:
      containers:
      - name: frontend-banking-container
        image: 112399677424.dkr.ecr.us-east-1.amazonaws.com/dev-bankfrontend:10
        ports:
        - containerPort: 3000
